--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ language_data==1.3.*
 markdown==3.*
 pillow==12.1.*
 psycopg==3.3.*
+pydantic==2.12.*
 python-dateutil==2.9.*
 python-dotenv==1.1.*
 pytz==2025.*
