--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp>=3.13.3
 asgiref==3.11.*
 celery[redis]==5.6.1
+celery-types>=0.24.0
 certifi==2026.*
 crispy-bootstrap5==2025.*
 Django==6.0.*
