Prior to fixing API Pydantic models

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        UID: 1000
+        GID: 1000
     command: /app/start.sh server
     restart: unless-stopped
     ports:
