--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,16 @@
 aiohttp>=3.13.3
 asgiref==3.11.*
-celery[redis]==5.6.1
+celery[redis]==5.6.*
 celery-types>=0.24.0
 certifi==2026.*
-crispy-bootstrap5==2025.*
 Django==6.0.*
 #django-allauth==65.13.*
-django-bootstrap5==26.*
-django-classy-tags==4.1.*
 django-cors-headers==4.8.*
 django-debug-toolbar==6.2.*
 django-environ==0.12.*
 django-ratelimit==4.1.*
 django-redis==6.*
 django-resized==1.0.*
-django-sekizai==4.1.*
 django-ninja==1.5.*
 djangorestframework-api-key==3.1.*
 hypercorn==0.18.*
