--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,21 @@ asgiref==3.11.*
 celery[redis]==5.6.*
 celery-types>=0.24.0
 certifi==2026.*
-Django==6.0.*
+Django==6.*
 #django-allauth==65.13.*
-django-cors-headers==4.8.*
+django-cors-headers==4.9.*
 django-debug-toolbar==6.2.*
 django-environ==0.12.*
-django-ratelimit==4.1.*
+django-ratelimit==4.*
 django-redis==6.*
-django-resized==1.0.*
-django-ninja==1.5.*
-djangorestframework-api-key==3.1.*
+django-resized==1.*
+django-ninja==1.*
+djangorestframework-api-key==3.*
 hypercorn==0.18.*
 langcodes==3.5.*
 language_data==1.3.*
 markdown==3.*
-pillow==12.1.*
+pillow==12.*
 psycopg==3.3.*
 pydantic==2.12.*
 python-dateutil==2.9.*
@@ -26,10 +26,9 @@ pytz==2025.*
 redis<6.5,>=4.5.2
 requests==2.*
 sentry-sdk==2.*
-rsa==4.9.*
 tzdata==2025.*
 uritemplate==4.2.*
 urllib3>=2.5.0
 wheel==0.46.*
-whitenoise==6.11.*
+whitenoise==6.*
 yarl==1.22.*
