--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ django-redis==6.*
 django-resized==1.*
 django-ninja==1.*
 djangorestframework-api-key==3.*
-hypercorn==0.18.*
+gunicorn==23.*
 langcodes==3.5.*
 language_data==1.3.*
 markdown==3.*
