Added multi-step image building and hardening
To prepare for handling user data and GDPR/Privacy regs, this is to help prepare the site for it.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ COMMUNITY_NAME="<COMMUNITY_NAME>"
 POSTGRES_DB="<POSTGRES_TABLE>"
 POSTGRES_USER="<POSTGRES_USER>"
 POSTGRES_PASSWORD="<POSTGRES_PASSWORD>"
+REDIS_PASSWORD="<REDIS_PASSWORD>"
 SECRET_KEY="<SECRETKEY>" # https://djecrety.ir
 SSL_HOST="<WEBSITE_URL>"
 DEBUG_MODE="True" # MAKE SURE THIS IS SET TO FALSE IN PRODUCTION!!
