--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ langcodes==3.5.*
 language_data==1.3.*
 markdown==3.*
 pillow==12.*
-psycopg==3.3.*
+psycopg[c]==3.3.*
 pydantic==2.12.*
 python-dateutil==2.9.*
 python-dotenv==1.1.*
