--- a/docker-compose.PROD.yml
+++ b/docker-compose.PROD.yml
@@ -24,7 +24,13 @@ services:
   django:
     container_name: django
     restart: unless-stopped
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        UID: 1000
+        GID: 1000
+    command: /app/start.sh server
     ports:
       - "8001:8001"
     env_file:
@@ -35,6 +41,27 @@ services:
     volumes:
       - ./srlc:/app
       - static_files:/app/static:rw
+      - ../guides:/app/docs
+    networks:
+      - thpsrun
+
+  celery:
+    container_name: celery
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        UID: 1000
+        GID: 1000
+    command: /app/start.sh celery
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./srlc:/app
       - ../guides:/app/docs
     networks:
       - thpsrun
